[package]
name = "twoway"
version = "0.1.5"
authors = ["bluss"]

description = "Fast substring search for strings and byte strings. Optional SSE4.2 acceleration (requires nightly and cargo feature flag pcmp) using pcmpestri. Memchr is the only mandatory dependency. The two way algorithm is also used by rust's libstd itself, but here it is exposed both for byte strings, using memchr, and optionally using a SSE4.2 accelerated version."

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/scratchspace"
documentation = "https://docs.rs/twoway/"

keywords = ["substring-search", "string", "pcmpestri", "find"]

[dependencies]
memchr = "2.0"
unchecked-index = { version = "0.2", optional = true }
jetscii = {version = "0.3", features= ["unstable"], optional = true }

[dev-dependencies]
regex = "0.2"
itertools = "0.7.0"
odds = "0.2"
macro-attr = "0.2"
newtype_derive = "0.1"
rand = "0.3.10"
quickcheck = { version = "0.4", default-features = false }
galil-seiferas = { version = "0.1.1" }

[features]
# pcmpestri
pcmp = ["unchecked-index"]

# Internal features for testing & benchmarking & development
pattern = []
all = ["jetscii", "pcmp", "pattern"]

[profile.release]
[profile.bench]
debug = true

[package.metadata.release]
no-dev-version = true
